@@ -1,3 +1,10 @@
+Fri Apr 25 10:52:27 2008  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* include/ruby/win32.h: define mode_t for umask.
+
+	* process.c (check_exec_options_i, check_exec_fds, run_exec_options):
+	  support "close_others" only when fork(2) is available.
+
 Fri Apr 25 00:16:11 2008  Tanaka Akira  <akr@fsij.org>
 
 	* process.c: include sys/stat.h for umask.
